<resources>
    <string name="Title_Splash">Legal SAT 24</string>
    <string name="splash_caption">un producto de Legal Security</string>
    <string name="app_name">Legal Security</string>
    <string name="password">Contraseña</string>
    <string name="LogoImageView">LogoImageView</string>
    <string name="BackgoundIV">BackgoundIV</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="User">Usuario</string>
    <string name="title_select_user">Elegí un usuario</string>
    <string name="name_select_user">Nombre</string>
    <string name="imageViewGrid">imageViewGrid</string>
    <string name="button_shut_down">button_shut_down</string>
    <string name="TextUserName_Selected">Hola</string>
    <string name="text_description_user_home">¿Qué vas a hacer hoy?</string>
    <string name="salir_tv">Salir</string>
    <string name="ingresar_btn">ingresar_btn</string>
    <string name="salir_btn">Salir</string>
    <string name="cancel_button_image">Cancelar</string>
    <string name="cuenta_atras">cuenta_atras</string>
    <string name="enter_title_header">Ingresar</string>
    <string name="leave_title_header">Salir</string>

    // timenotification_title_alertr text description
    <string name="description_message">Nuestros operadores en unos segundos van a tomar su pedido.</string>


    // succes text description
    <string name="message_strong_succes">Listo</string>
    <string name="message_succes">Podés salir tranquilo de tu vivienda.</string>
    <string name="message_succes_entry">Podés ingresar tranquilo a tu vivienda.</string>
    <string name="notification_title">Te informamos que</string>
    <string name="notification_title_alert">Alerta !</string>

    // wait text description
    <string name="message_strong_aguarda_icon">Aguardá un momento</string>
    <string name="message_aguarda_icon">Parece que hay un movimiento inesperado, estamos
        verificando las cámaras.</string>

    // danger text description
    <string name="message_strong_peligro">Movimientos inesperados</string>
    <string name="message_peligro">Estamos comunicándonos con el 911.\n\n Aguardá dentro de tu
        vehículo\n o mantenete fuera del área.</string>
    <string name="message_call911">Estamos comunicándonos con el 911</string>

    // Error default
    <string name="error_default">Ocurrio un error, por favor reintente más tarde</string>
    <string name="error_login">No se puede acceder a la información por favor reintente más tarde</string>
    <string name="error_connection">Algo salió mal por favor reintente más tarde</string>
    <string name="error_location">No se pudo obtener tu ubicación, por favor volve a intentalo nuevamente</string>

    // login text
    <string name="complete_fields">Por favor complete los campos y reintente</string>
    <string name="complete_user_field">Por favor, ingrese el nombre de usuario</string>
    <string name="complete_password_field">Por favor, ingrese la contraseña</string>
    <string name="invalid_data">Algunos datos ingresados son inválidos, por favor verifique y reintente</string>

    // warning
    <string name="warning_title">Atención</string>
    <string name="warning_gps">Necesitamos que aceptes utilizar los servicios de Google para que la aplicación pueda funcionar</string>
    <string name="warning_connection">Necesitamos que estes conectado a internet para que la aplicación pueda funcionar</string>
    <string name="warning_out_of_coverage">En este momento estás fuera del área de cobertura, por favor ingresá de nuevo cuando estés más cerca de tu hogar</string>
    <string name="warning_lost_connection">Por favor, revisa tu conexión a internet para poder seguir utilizando la aplicación</string>

    //popup cancel alert
    <string name="popup_message">¿Desea cancelar la operación?</string>
    <string name="popup_logout">¿Querés cerrar sesión?</string>
    <string name="popup_shutdown">¿Desea salir de la operación?</string>
    <string name="yes_message">Sí</string>
    <string name="no_message">No</string>

    <string name="message_end">Gracias por confiar en nosotros.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message_end_title" />

    <string name="user_inicial">Hola</string>

    <string name="fab_soundcustom">Sonido de alarma</string>
    <string name="toolbar_Title">Configuración</string>
    <string name="token_FCM" />

</resources>
