<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/BackgoundIV"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/background3x"
        />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/backgroundColor"
        android:contentDescription="@string/LogoImageView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo3x" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="269dp"
        android:layout_height="50dp"
        android:layout_marginTop="230dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="55dp"
        android:text="@string/iniciar_sesi_n"
        android:textColor="@color/backgroundTextView"
        android:textSize="24sp"
        android:fontFamily="@font/antenna_medium"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo3x"
        />

    <TextView
        android:id="@+id/userTv"
        android:layout_width="269dp"
        android:layout_height="30dp"
        android:layout_marginTop="300sp"
        android:layout_marginStart="50sp"
        android:layout_marginEnd="55dp"
        android:text="@string/User"
        android:textColor="@color/backgroundTextView"
        android:textSize="18sp"
        android:fontFamily="@font/antenna_medium"
        android:textAlignment="textStart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <EditText
        android:id="@+id/user"
        android:layout_width="269sp"
        android:layout_height="50sp"
        android:layout_marginTop="330dp"
        android:layout_marginStart="50sp"
        android:layout_marginEnd="55dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textColor="@color/backgroundTextView"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/passwordTv"
        android:layout_width="269dp"
        android:layout_height="30dp"
        android:layout_marginTop="400dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="55dp"
        android:text="@string/password"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:textColor="@color/backgroundTextView"
        android:textSize="18sp"
        android:fontFamily="@font/antenna_medium"
        android:textAlignment="textStart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="269sp"
        android:layout_height="50sp"
        android:layout_marginTop="430dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="55dp"
        android:ems="10"
        android:inputType="textPassword"
        android:labelFor="@id/password"
        android:textColor="@color/backgroundTextView"
        android:textSize="18sp"
        android:textAlignment="textStart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" tools:targetApi="o"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="269dp"
        android:layout_height="50dp"
        android:layout_marginTop="530dp"
        android:background="@drawable/corner_radius_button"
        android:bottomLeftRadius="10dp"
        android:bottomRightRadius="10dp"
        android:text="@string/iniciar_sesi_n"
        android:textColor="@color/backgroundTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/loadingService"
        style="?android:attr/progressBarStyle"
        android:layout_width="92dp"
        android:layout_height="86dp"
        android:layout_marginTop="252dp"
        android:visibility="invisible"
        android:rotation="90"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/loading_circle_view"
        android:indeterminateDuration="2000"
        android:textColor="@color/backgroundTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>