<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".activities.InHomeActivity">

    <ImageView
        android:id="@+id/background_select_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/BackgoundIV"
        android:cropToPadding="false"
        android:focusable="true"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_gray3x" />

    <TextView
        android:id="@+id/access_title_header"
        android:layout_width="99dp"
        android:layout_height="30dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="137dp"
        android:layout_marginStart="138dp"
        android:fontFamily="@font/antenna_medium"
        android:text=""
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/icon_shut_down"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="314dp"
        android:layout_marginEnd="23dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/ic_power_settings_new_black_24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/button_shut_down" />
    <View
        android:id="@+id/view_timer"
        android:layout_width="156dp"
        android:layout_height="156dp"
        android:layout_marginStart="92dp"
        android:layout_marginEnd="91dp"
        android:layout_marginTop="130dp"
        android:background="@drawable/corner_view_circle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timer_back"
        android:layout_width="130dp"
        android:layout_height="77dp"
        android:layout_marginTop="168dp"
        android:fontFamily="@font/lato_regular"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/backgroundColor"
        android:textSize="50sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description_access_strong"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="328dp"
        android:fontFamily="@font/lato_bold"
        android:text=""
        android:textAlignment="center"
        android:textSize="21sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description_access"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="376dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/description_message"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cancel_button_image"
        android:layout_width="270dp"
        android:layout_height="54dp"
        android:layout_marginTop="512dp"
        android:text="@string/cancel_button_image"
        android:textAlignment="center"
        android:fontFamily="@font/lato_regular"
        android:textSize="18sp"
        android:background="@drawable/default_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ProgressBar
        android:id="@+id/progressBarCircle"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="108dp"
        android:background="@drawable/drawable_circle_black"
        android:indeterminate="false"
        android:max="120"
        android:progress="120"
        android:rotation="90"
        android:layoutDirection="rtl"
        android:progressDrawable="@drawable/drawable_circle_dark_red"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <ProgressBar
        android:id="@+id/loadingService"
        style="?android:attr/progressBarStyle"
        android:layout_width="92dp"
        android:layout_height="86dp"
        android:layout_marginTop="252dp"
        android:visibility="invisible"
        android:rotation="90"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/loading_circle_view"
        android:indeterminateDuration="2000"
        android:textColor="@color/backgroundTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>